Funcionalidad búsqueda de instructores, con página de resultados. Corregido bug en la creación de calendario json. Cambiada tabla indice p/ busqueda instructores, de fechas no-disponibles a fechas disponibles.

--- a/public_html/resources/css/custom.css
+++ b/public_html/resources/css/custom.css
@@ -23,12 +23,12 @@
 
 /*botones buscador*/
 
-.custom-search-input-2 input[type='submit'] {
+.custom-search-input-2 button.btn_search {
 	background-color: #299aea;
 }
 
 
-.custom-search-input-2 input[type='submit']:hover {
+.custom-search-input-2 button.btn_search:hover {
 	background-color: darkgray;
 	color: white;
 
