--- a/public_html/resources/css/custom.css
+++ b/public_html/resources/css/custom.css
@@ -1,17 +1,25 @@
 /*============================================================================================*/
 /* Your custom styles below */
 /*============================================================================================*/
-/*-------- COLOR BLUE--------*/
-[data-loader="circle-side"] {
-  border: 2px solid #299aea;
-}
+
+
+
 
 
 /*titulo*/
 .hero_single.version_2 .wrapper h3 {
-	 font-size: 1.8rem  ; 
+	 font-size: 2.3rem  ; 
 	 color: #ffc107;
 	 text-shadow: black;
+}
+
+/*barra de ofertas*/
+
+#ofertas {
+	background-color : #ce4a4a ;
+}
+#ofertas:hover {
+	background-color : darkgray ;
 }
 
 /*botones menu*/
@@ -41,10 +49,48 @@
 
 /*separador*/
 
+#banner {
+
+
+
+	padding-right: 0;
+    padding-left: 0;
+    height: 100px;
+
+}
+#bannerbox1{
+
+	padding: 25px 30px 41px 30px;
+
+     	
+} 
+
+#tittlebanbox { }
+
+
+
+#pago  {
+    width: 100%;
+    height: 50px;
+	background: url(../img/mpl.png) center center no-repeat;
+	-webkit-background-size: contain;
+  -moz-background-size: contain;
+  -o-background-size: contain;
+  background-size: contain;
+  
+	
+}
+
 .main_title_2 span em {
 	background-color: #8b8c8d;
 }
 
+
+
+/*contenedor*/
+
+
+}
 
 /*segundo titulo*/
 .main_title_2 h2 {
@@ -55,6 +101,37 @@
 .main_title_2 p {
 	font-size: 1.3rem;
 }
+ 
+
+
+
+/*boxes de los anuncios*/
+
+#contben {
+
+	height: 262px;
+	
+    
+
+}
+
+/*seccion telefonos*/
+
+#barratel {
+	
+}
+
+.whatsapp {
+	background: url(../img/whtapp.png) center center no-repeat;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  margin-top: 12px;
+	height: 80px;
+	width: 80px;
+}
+
 
 /*iconos*/
 
@@ -168,7 +245,7 @@ ul#cat_nav li a:hover, ul#cat_nav li a#active, ul#cat_nav li a.active {
 
 /*resultados de busqueda*/
 .mm-slideout {
-	background-color: #22c2ff0f;
+	background-color: #0000000d;
 
 
 
