--- a/public_html/resources/css/custom.css
+++ b/public_html/resources/css/custom.css
@@ -2,7 +2,25 @@
 /* Your custom styles below */
 /*============================================================================================*/
 
+/*header*/
 
+
+
+header.header.sticky #logo p{
+     color: black;
+}
+/*LOGO*/
+
+#logo h6{
+	font-weight: bolder;
+	font-size: 1.3em;
+	color: orange;
+}
+#logo p{
+	margin-top: -10px;
+	font-size: medium;
+	color: white;
+}
 
 
 
@@ -295,4 +313,11 @@ a.btn_1.full-width.purchase, .btn_1.full-width.purchase {
 
 .form_title h3 strong{
 	background-color: darkgrey;
+}
+
+
+/*login*/
+
+#login p{
+  color: black;
 }
