--- a/public_html/resources/css/custom.css
+++ b/public_html/resources/css/custom.css
@@ -199,7 +199,7 @@ a.btn_1:hover, .btn_1:hover {
 /*imagen portada*/
 
 .hero_single.version_2:before {
-  background: url(../img/1.jpg) center center no-repeat;
+  background: url(../img/1.jpg?4) center center no-repeat;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -211,7 +211,7 @@ a.btn_1:hover, .btn_1:hover {
 /*imagen call*/
 
 .call_section {
-  background: url(../img/2.png) center center no-repeat;
+  background: url(../img/2.png?4) center center no-repeat;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
