--- a/public_html/resources/css/style.css
+++ b/public_html/resources/css/style.css
@@ -1090,7 +1090,7 @@ header.sticky .hamburger-inner, header.sticky .hamburger-inner::before, header.s
 .hero_in {
   width: 100%;
   height: 450px;
-  position: relative;
+  /*position: relative;*/
   overflow: hidden;
   text-align: center;
   color: #fff;
@@ -1229,7 +1229,7 @@ header.sticky .hamburger-inner, header.sticky .hamburger-inner::before, header.s
   justify-content: center;
   height: 100%;
 }
-.hero_in .wrapper h1 {
+/*.hero_in .wrapper h1 {
   color: #fff;
   font-size: 42px;
   font-size: 2.625rem;
@@ -1253,7 +1253,7 @@ header.sticky .hamburger-inner, header.sticky .hamburger-inner::before, header.s
   margin-bottom: 20px;
   border-radius: 10px;
   opacity: 1;
-}
+}*/
 .hero_in .wrapper p {
   font-weight: 300;
   margin-bottom: 0;
@@ -2624,24 +2624,25 @@ video {
   background-color: black;
   background-color: rgba(0, 0, 0, 0.3);
 }
-.hero_single.version_2 .wrapper h3 {
+/*.hero_single.version_2 .wrapper h1 {
   font-size: 42px;
   font-size: 2.625rem;
   text-shadow: 4px 4px 12px rgba(0, 0, 0, 0.3);
 }
 @media (max-width: 767px) {
-  .hero_single.version_2 .wrapper h3 {
+  .hero_single.version_2 .wrapper h1 {
     font-size: 26px;
     font-size: 1.625rem;
     margin-top: 60px;
   }
 }
 @media (max-width: 575px) {
-  .hero_single.version_2 .wrapper h3 {
+  .hero_single.version_2 .wrapper h1 {
     font-size: 22px;
     font-size: 1.375rem;
   }
 }
+*/
 .hero_single.version_2 .wrapper p {
   font-weight: 400;
   margin: 5px 0 0 0;
