--- a/public_html/resources/css/custom.css
+++ b/public_html/resources/css/custom.css
@@ -352,3 +352,23 @@ a.btn_1.full-width.purchase, .btn_1.full-width.purchase {
 	
 }
 
+
+
+/*boton totop*/
+
+#toTop {
+    position: fixed;
+    right: 25px;
+    bottom: 75px!important;
+    z-index: 9999;
+    width: 46px;
+    height: 46px;
+    background-color: rgba(0, 0, 0, 0.6);
+    opacity: 1;
+    border-radius: 50%;
+    text-align: center;
+    font-size: 21px;
+    color: #fff;
+    cursor: pointer;
+}
+
