--- a/public_html/resources/css/custom.css
+++ b/public_html/resources/css/custom.css
@@ -3,10 +3,11 @@
 /*============================================================================================*/
 
 
-main {
-	overflow-x: hidden;
-}
+ html main {
+   	overflow-y: hidden;
+   	overflow-x: hidden;
 
+   }
 
 /*header*/
 
