Mas arreglos, panel de instructor , usuario y checkout.

--- a/public_html/resources/css/custom.css
+++ b/public_html/resources/css/custom.css
@@ -228,7 +228,7 @@ a.btn_1:hover, .btn_1:hover {
 /*imagen call*/
 
 .call_section {
-  background: url(../img/2.png?4) center center no-repeat;
+  background: url(../img/2.jpg?4)center center no-repeat;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
