--- a/public_html/resources/css/style.css
+++ b/public_html/resources/css/style.css
@@ -1090,7 +1090,7 @@ header.sticky .hamburger-inner, header.sticky .hamburger-inner::before, header.s
 .hero_in {
   width: 100%;
   height: 450px;
-  position: relative;
+  /*position: relative;*/
   overflow: hidden;
   text-align: center;
   color: #fff;
