--- a/public_html/resources/admin/css/custom.css
+++ b/public_html/resources/admin/css/custom.css
@@ -3,3 +3,15 @@
 .box_general {
 	padding-bottom: 30px
 }
+
+.filter {
+	width: 170px;
+}
+
+.sbOptions a {
+	text-transform: none;
+}
+
+.sbOptions li:last-child {
+    padding-left: 7px;
+}
